--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
+    "moment": "^2.18.1",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.3"
@@ -23,6 +24,6 @@
   "devDependencies": {
     "expect": "^1.20.2",
     "mocha": "^3.4.2",
-    "nodemon":"^1.11.0"
+    "nodemon": "^1.11.0"
   }
 }
