--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha test/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'"
+    "test": "export NODE_ENV=test || SET NODE_ENV=test && mocha test/*.test.js",
+    "watch": "nodemon --exec 'npm test'"
   },
   "engines": {
     "node": "6.11.0"
